# tft-discord-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  guild_db_handler.py  main.py  pyproject.toml  tft_data_retriever.py
scraping/: lambda_function.py  tft_recent_data_retriever.py
