[project]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "damianmore",email = "dmore0126@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord (>=2.3.2,<3.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "asyncio (>=4.0.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "boto3 (>=1.40.74,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
